--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@
 /TableAtm/DataModules/__recovery/
 /TableAtm/Resources/__recovery/
 /TableAtm/Translate/__recovery/
+/Translate/__recovery/
+/Translate/__history/
+/dcu/
