--- a/EmailParser.dproj
+++ b/EmailParser.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Win64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
         <MainSource>EmailParser.dpr</MainSource>
@@ -109,17 +109,17 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
-        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=0.0.1.40;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=0.0.1.37;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=0.0.1.42;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=0.0.1.37;Comments=</VerInfo_Keys>
         <Icon_MainIcon>EmailParser_Icon.ico</Icon_MainIcon>
         <DCC_IntegerOverflowCheck>true</DCC_IntegerOverflowCheck>
         <Debugger_RunParams>-lang=en</Debugger_RunParams>
         <DCC_RangeChecking>true</DCC_RangeChecking>
-        <VerInfo_Build>40</VerInfo_Build>
+        <VerInfo_Build>42</VerInfo_Build>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
-        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=0.0.1.47;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=0.0.1.37;Comments=</VerInfo_Keys>
-        <VerInfo_Build>47</VerInfo_Build>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=0.0.1.50;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=0.0.1.37;Comments=</VerInfo_Keys>
+        <VerInfo_Build>50</VerInfo_Build>
         <Icon_MainIcon>EmailParser_Icon.ico</Icon_MainIcon>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
@@ -146,7 +146,6 @@
         <RcCompile Include="Resources\Logo.rc">
             <Form>Logo.res</Form>
         </RcCompile>
-        <DCCReference Include="Sources\Utils.Exceptions.pas"/>
         <DCCReference Include="Common\ArrayHelper.pas"/>
         <DCCReference Include="Common\Common.Types.pas"/>
         <DCCReference Include="Sources\CustomForms.pas">
@@ -162,16 +161,21 @@
             <Form>frameCustom</Form>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
-        <DCCReference Include="Sources\Frame.LogView.pas">
-            <Form>frameLogView</Form>
-            <DesignClass>TFrame</DesignClass>
-        </DCCReference>
         <DCCReference Include="Sources\Frame.Pathes.pas">
             <Form>framePathes</Form>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="Sources\Frame.RegExpParameters.pas">
             <Form>frameRegExpParameters</Form>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="Sources\Frame.ResultView.pas">
+            <Form>frameResultView</Form>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="Sources\Frame.Settings.pas">
+            <Form>frameSettings</Form>
+            <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="Resources\Global.Resources.pas"/>
@@ -182,13 +186,9 @@
             <Form>InformationDialog</Form>
         </DCCReference>
         <DCCReference Include="Common\MessageDialog.pas"/>
-        <DCCReference Include="Sources\Performer.pas">
-            <Form>frmPerformer</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
+        <DCCReference Include="Sources\Performer.pas"/>
         <DCCReference Include="Sources\Settings.pas">
             <Form>frmSettings</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Sources\SplashScreen.pas">
             <Form>frmSplashScreen</Form>
@@ -196,10 +196,13 @@
         <DCCReference Include="Translate\Translate.Lang.pas"/>
         <DCCReference Include="Translate\Translate.Resources.pas"/>
         <DCCReference Include="Common\Utils.pas"/>
+        <DCCReference Include="Sources\Utils.Exceptions.pas"/>
         <DCCReference Include="Common\Utils.LocalInformation.pas"/>
         <DCCReference Include="Common\Utils.VerInfo.pas"/>
         <DCCReference Include="Sources\VirtualTrees.ExportHelper.pas"/>
-        <DCCReference Include="Common\XmlFiles.pas"/>
+        <DCCReference Include="Common\XmlFiles.pas">
+            <Form>$R *.res</Form>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -252,12 +255,6 @@
                 <DeployFile LocalName="bin\EmailParser.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>EmailParser.exe</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
-                <DeployFile LocalName="bin\EmailParser.rsm" Configuration="Debug" Class="DebugSymbols">
-                    <Platform Name="Win64">
-                        <RemoteName>EmailParser.rsm</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
