--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@
 /Sources/Frames/__history/
 /Sources/Frames/__recovery/
 /Sources/Translate/__history/
+/Sources/CleverInternetSuite/__history/
+/Sources/Common/__history/
