--- a/EmailParser.dproj
+++ b/EmailParser.dproj
@@ -4,7 +4,7 @@
         <ProjectVersion>19.5</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -118,9 +118,10 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
-        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=0.0.1.112;InternalName=Email Parser;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=Email Parser;ProductVersion=0.0.1.112;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=0.0.1.123;InternalName=Email Parser;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=Email Parser;ProductVersion=0.0.1.112;Comments=</VerInfo_Keys>
         <Icon_MainIcon>EmailParser_Icon.ico</Icon_MainIcon>
         <VerInfo_Debug>true</VerInfo_Debug>
+        <VerInfo_Build>123</VerInfo_Build>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -161,6 +162,11 @@
         <DCCReference Include="Sources\Common\DebugWriter.pas"/>
         <DCCReference Include="Sources\Common\ExecConsoleProgram.pas"/>
         <DCCReference Include="Sources\Common\Files.Utils.pas"/>
+        <DCCReference Include="Sources\Frames\Frame.AllAttachments.pas">
+            <Form>frameAllAttachments</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <DCCReference Include="Sources\Frames\Frame.Attachments.pas">
             <Form>frameAttachments</Form>
             <FormType>dfm</FormType>
@@ -173,6 +179,11 @@
         </DCCReference>
         <DCCReference Include="Sources\Frames\Frame.Custom.pas">
             <Form>FrameCustom</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="Sources\Frames\Frame.Emails.pas">
+            <Form>frameEmails</Form>
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
@@ -190,6 +201,11 @@
             <Form>frameResultView</Form>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="Sources\Frames\Frame.Source.pas">
+            <Form>FrameSource</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <DCCReference Include="Sources\Global.Resources.pas"/>
         <DCCReference Include="Sources\Global.Types.pas"/>
         <DCCReference Include="Sources\Common\HtmlConsts.pas"/>
@@ -199,6 +215,9 @@
             <Form>TInformationDialog</Form>
         </DCCReference>
         <DCCReference Include="Sources\CleverInternetSuite\MailMessage.Helper.pas"/>
+        <DCCReference Include="Sources\MainForm.pas">
+            <Form>frmMain</Form>
+        </DCCReference>
         <DCCReference Include="Sources\Common\MessageDialog.pas"/>
         <DCCReference Include="Sources\PDFiumLib\PdfiumCore.pas"/>
         <DCCReference Include="Sources\PDFiumLib\PdfiumCtrl.pas"/>
@@ -212,9 +231,6 @@
         </DCCReference>
         <DCCReference Include="Sources\Common\RegExp.Types.pas">
             <Form>$R *.res</Form>
-        </DCCReference>
-        <DCCReference Include="Sources\Settings.pas">
-            <Form>frmSettings</Form>
         </DCCReference>
         <DCCReference Include="Sources\SplashScreen.pas">
             <Form>frmSplashScreen</Form>
