--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@
 /Sources/Translate/__history/
 /Sources/CleverInternetSuite/__history/
 /Sources/Common/__history/
+/Sources/dEXIF/__history/
+/Sources/Common/__recovery/
+/Sources/HTMLParse/__history/
